# POMC

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  release.yml  version-bump.yml
launcher/: eslint.config.js  package.json  pnpm-lock.yaml
launcher/src/: App.tsx  styles.css
launcher/src-tauri/: Cargo.toml  tauri.conf.json
launcher/src-tauri/src/: auth.rs  commands.rs  downloader.rs  main.rs  ping.rs  storage.rs
launcher/src/bindings/: index.ts
launcher/src/components/: Console.tsx  Navbar.tsx  Titlebar.tsx
launcher/src/lib/: servers.ts  state.ts  types.ts
launcher/src/pages/: Friends.tsx  Home.tsx  Installations.tsx  News.tsx  Servers.tsx
pomme-client/: Cargo.toml
pomme-client/src/: assets.rs  benchmark.rs  dirs.rs  discord.rs  entity.rs  logging.rs  resource_pack.rs
pomme-client/src/net/: mod.rs  sender.rs
pomme-client/src/physics/: aabb.rs  mod.rs  movement.rs
pomme-client/src/player/: inventory.rs  mod.rs
pomme-client/src/renderer/: camera.rs  context.rs  entity_model.rs  mod.rs  shader.rs  util.rs
pomme-client/src/ui/: auth.rs  font.rs  pause.rs  server_list.rs
pomme-client/src/window/: mod.rs
pomme-client/src/world/: chunk.rs
pomme-launcher/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
pomme-launcher/src-tauri/: Cargo.toml
src/: args.rs  main.rs
src/renderer/: context.rs  mod.rs  swapchain.rs
src/ui/: hud.rs
src/window/: mod.rs
src/world/: chunk.rs
(+54 files in other folders)
