[workspace]
resolver = "3"
members = [
    "pomme-client",
    "pomme-launcher/src-tauri"
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
directories = "6"
sha1_smol = "1"
open = "5"
base64 = "0.22"
zip = { version = "8.5", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
